Add servicesDir to IAP properties file

--- a/roles/platform/templates/16.0-properties.j2
+++ b/roles/platform/templates/16.0-properties.j2
@@ -50,6 +50,7 @@ defined in the host file.
 {% endif %}
 {
   "id": "{{ profile_name }}",
+  "servicesDir": "{{ iap_services_dir }}",
   "mongoProps": {
     "credentials": {
       "dbAuth": {{ mongodb_auth | bool | to_json }},
