--- a/roles/platform/templates/profile.j2
+++ b/roles/platform/templates/profile.j2
@@ -118,7 +118,7 @@
     "cookieName": "token",
     "description": "Authentication",
     "logoutTime": 60,
-    {% if iap_release >= 2023.2 %}
+    {% if iap_release not in [2021.1, 2021.2, 2022.1, 2023.1] %}
     "sso": {
       "enabled": false,
       "config": ""
